# kot-mcp-server

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
src/kot_mcp/: client.py  server.py  types.py
