[project]
name = "kot-mcp-server"
version = "0.1.0"
description = "King of Time MCP Server - 勤怠管理を Claude から操作"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
kot-mcp-server = "kot_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kot_mcp"]
